--- a/planes.html
+++ b/planes.html
@@ -12,13 +12,15 @@
     <title>Guía de precios</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
     <link href="fonts/Open-sans.css" rel="stylesheet">
     <link href="fonts/Product-sans.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
@@ -36,10 +38,10 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top " style="background-color:rgba(255, 255, 255, 0.945)" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"> 
-          <img class="logo-google" src="img/logo.png" alt="logo-google">
+          <img class="logo-google" src="img/logo-drive.png" alt="logo-google" id="logo-drivee">
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -56,7 +58,7 @@
               <a class="nav-link js-scroll-trigger Como-usar" href="howto.html">Cómo usar Drive</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger Precios" href="precios.html">Precios</a>
+              <a class="nav-link js-scroll-trigger Precios" href="planes.html">planes</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger Descargar" href="descargar.html">Descargar</a>
@@ -68,14 +70,14 @@
                 <a class="nav-link js-scroll-trigger Ayuda" href="ayuda.html">Ayuda</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger go-to" href="login.php">Ir a Google Drive</a>
+                  <a class="nav-link js-scroll-trigger go-to" href="index.html">Ir al inicio</a>
                 </li>
           </ul>
 
 
         </div>
       </div>
-    </nav>
+    </nav><br>
 
     <!-- Page Content -->
     <div class="container">
