--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#sobre-drive">Sobre Google Drive</a>
+              <a class="nav-link js-scroll-trigger" href="#sobre-drive">Mas Sobre Google Drive</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">catalogo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">contactos</a>
             </li>
           </ul>
         </div>
@@ -98,7 +98,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">plan gratis</h3>
-              <p class="text-muted mb-0" style="color:blue">Este plan debe pagar 0 dolares con 1gb de espacio</p>
+              <p class="text-muted mb-0">Este plan debe pagar 0 dolares con 1gb de espacio</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
