--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="img/icono.ico">
 
     <title>Creative - Start Bootstrap Theme</title>
 
@@ -59,7 +60,7 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h1 class="text-uppercase" id="letra-inicio" style="   font-family: 'open sans',arial,sans-serif;  ">
+            <h1 class="text-uppercase" id="letra-inicio" style="   font-family: 'open sans',arial,sans-serif; ">
               <strong>Todos tus archivos estés donde estés</strong>
             </h1><br>
           </div>
