--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/icono.ico">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Sumachik</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,10 +40,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#sobre-drive">Mas Sobre Google Drive</a>
+              <a class="nav-link js-scroll-trigger" href="#sobre-drive">Mas Sobre Sumachik</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">catalogo</a>
@@ -77,7 +77,7 @@
           <div class="col-lg-6 mx-auto text-center">
             <h2 class="section-heading text-white">Guarda cualquier archivo</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Drive te ofrece 15 GB de almacenamiento online de Google gratis para empezar. Guarda fotos, artículos, diseños, dibujos, grabaciones, vídeos o lo que quieras.</p>
+            <p class="text-faded mb-4">Sumachik te ofrece 1 GB de almacenamiento online gratis para empezar. Guarda tu codigo de forma segura y comparte lo que desees con otros usuarios.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#servicios">Leer Más!</a>
           </div>
         </div>
@@ -106,14 +106,14 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem  text-primary mb-3 sr-icon-2"></i>
               <h3 class="mb-3">Plan 3 GB</h3>
-              <p class="text-muted mb-0">este plan cuesta 3 dolares al mes y puede ver y editar contenido con 3gb de espacio ara pryectos</p>
+              <p class="text-muted mb-0">este plan cuesta 3 dolares al mes y puede ver y editar contenido con 3gb de espacio para pryectos</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">plan de 10 GB</h3>
-              <p class="text-muted mb-0">cuesta 9 dolares al mes y puede hacer lo antes XD, con 10 gb de espacio para proyectos yuca de mier..</p>
+              <p class="text-muted mb-0">cuesta 9 dolares al mes y puede hacer lo de antes XD, con 10 gb de espacio para proyectos</p>
             </div>
           </div>
           
@@ -132,15 +132,15 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="img/catalogo/fullsize/2.jpg">
+                <a class="portfolio-box imagen" href="img/catalogo/fullsize/2.jpg">
                   <img class="img-fluid" src="img/catalogo/thumbnails/2.jpg" alt="">
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
                       <div class="project-category text-faded">
-                        Espacio de trabajo
+                        Organizado
                       </div>
                       <div class="project-name">
-                        Project Name
+                        Trabaja de forma organizada en la nube 
                       </div>
                     </div>
                   </div>
@@ -148,14 +148,14 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/catalogo/fullsize/1.jpg">
-              <img class="img-fluid" src="img/catalogo/thumbnails/1.jpg" alt="">
+              <img class="img-fluid " src="img/catalogo/thumbnails/1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Espacio de trabajo
+                    Comodidad
                   </div>
                   <div class="project-name">
-                    gratis
+                    Accede desde cualquier Dispositivo
                   </div>
                 </div>
               </div>
@@ -167,10 +167,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Grupos de trabajo
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Trabaja en grupo con tus compañeros
                   </div>
                 </div>
               </div>
@@ -182,10 +182,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Ideas
                   </div>
                   <div class="project-name">
-                    Project Name
+                   Comparte tus ideas y proyectos con los demas
                   </div>
                 </div>
               </div>
@@ -197,10 +197,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Portabilidad
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Accede desde Cualquier Lugar
                   </div>
                 </div>
               </div>
@@ -212,10 +212,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Privacidad
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Trabaja de forma segura con espacio en la nube
                   </div>
                 </div>
               </div>
