--- a/planes.html
+++ b/planes.html
@@ -72,19 +72,19 @@
 
         <div class="col-lg-12 contenedor-precios">
           <h2>Guía de precios</h2><br>
-          <p>Empieza con 15 GB gratuitos o cámbiate a un plan premium.</p>
+          <p>Empieza con 2 GB gratuitos o cámbiate a un plan premium.</p>
           <div class="precios">
             <div class=" col-lg-4 col-xl-4 col-lg-4 col-sm-12 col-12 item-precio planes">
-              <h3>100 GB</h3><br>
-              <p>$1.99 / mes</p>
+              <h3>1 GB</h3><br>
+              <p>$0 (Gratis) / mes</p>
             </div>
             <div class="col-lg-4 col-xl-4 col-lg-4 col-sm-12 col-12 item-precio planes">
-              <h3>1 TB</h3><br>
-              <p>$9.99 / mes</p>
+              <h3>3 GB</h3><br>
+              <p>$3.99 / mes</p>
             </div>
             <div class="col-lg-4 col-xl-4 col-lg-4 col-sm-12 col-12 item-precio planes">
-              <h3>10 TB</h3><br>
-              <p>$99.99 / mess</p>
+              <h3>10 GB</h3><br>
+              <p>$9.99 / mess</p>
             </div>
           </div>
           
@@ -96,9 +96,9 @@
                 <tr>
                <td><select style="width: auto;  " class="custom-select" id="select-canales">
                     <option selected>Seleccionar un plan</option>
-                    <option value="1">Plan 1</option>
-                    <option value="2">Plan 2</option>
-                    <option value="3">Plan 3</option>
+                    <option value="1">Plan 2 GB</option>
+                    <option value="2">Plan 3 GB</option>
+                    <option value="3">Plan 10 GB</option>
        
                     </select>
                   </td>
