--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#sobre-drive">Mas Sobre Sumachik</a>
+              <a class="nav-link js-scroll-trigger" href="#sobre-sumachik">Mas Sobre Sumachik</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Servicios</a>
+              <a class="nav-link js-scroll-trigger" href="#servicios">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">catalogo</a>
+              <a class="nav-link js-scroll-trigger" href="#catalogo">catalogo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">contactos</a>
@@ -60,8 +60,8 @@
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h1 class="text-uppercase" id="letra-inicio" style="   font-family: 'open sans',arial,sans-serif; ">
-              <strong>Todos tus archivos estés donde estés</strong>
+            <h1 class="text-uppercase" id="letra-inicio" style="   font-family: 'open sans',arial,sans-serif;">
+              <strong >Todos tus archivos estés donde estés</strong>
             </h1><br>
           </div>
           <div class="col-lg-8 mx-auto">
@@ -71,7 +71,7 @@
       </div>
     </header>
 
-    <section class="color-sobre-drive" id="sobre-drive" >
+    <section class="color-sobre-drive" id="sobre-sumachik" >
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mx-auto text-center">
