--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#pagina-top">Inicio</a>
+        <a class="navbar-brand js-scroll-trigger" href="#pagina-top"><img src="img/logo.png" style="width: 3em;">   Inicio </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -99,21 +99,21 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">plan gratis</h3>
-              <p class="text-muted mb-0">Este plan debe pagar 0 dolares con 1gb de espacio</p>
+              <p class="text-muted mb-0">1 proyecto totalmente gratuito, solo es necesario registrarse</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem  text-primary mb-3 sr-icon-2"></i>
-              <h3 class="mb-3">Plan 3 GB</h3>
-              <p class="text-muted mb-0">este plan cuesta 3 dolares al mes y puede ver y editar contenido con 3gb de espacio para pryectos</p>
+              <h3 class="mb-3">Plan 3 Proyectos</h3>
+              <p class="text-muted mb-0">3 proyectos, con acceso a un chat de grupo de trabajo, con un costo de 3.99 dólares</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-3"></i>
-              <h3 class="mb-3">plan de 10 GB</h3>
-              <p class="text-muted mb-0">cuesta 9 dolares al mes y puede hacer lo de antes XD, con 10 gb de espacio para proyectos</p>
+              <h3 class="mb-3">plan de 10 Proyectos</h3>
+              <p class="text-muted mb-0">10 proyectos con acceso a un chat de grupo de trabajo, con un costo de 9.99 dólares</p>
             </div>
           </div>
           
