--- a/public-plan1/registrar.html
+++ b/public-plan1/registrar.html
@@ -48,7 +48,7 @@
             
             <button type="button" class="btn btn-success" id="btn-facturar">Factruar</button>
             <button type="button" class="btn btn-success" href="editor.html" id="btn-registrar">Crear Cuenta</button>
-            <a class="btn btn-success"  href="login.html">Siguiente</a>
+            <a class="btn btn-success"  href="login.html">Iniciar Sesion</a>
 
         </form>
 
