--- a/public-plan2/editor.html
+++ b/public-plan2/editor.html
@@ -93,7 +93,7 @@
           </ul>
         <form class="my-2 my-lg-0" id="formulario-plan2">
             <button class="btn btn-outline-success my-2 my-sm-0" type="button" style="border-radius: 1.55rem;" 
-            id="guargar-codigo" onclick=modalCarpetas();>Crear Carpetas</button>
+            id="guargar-carpetass" onclick=modalCarpetas();>Crear Carpetas</button>
             
           
           <button class="btn btn-outline-success my-2 my-sm-0" type="button" style="border-radius: 1.55rem;" 
