--- a/public-plan2/editor.html
+++ b/public-plan2/editor.html
@@ -72,7 +72,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Usuario <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="perfil-usuario.html">Usuario <span class="sr-only">(current)</span></a>
           </li>
          
             <li class="nav-item active">
