--- a/public-plan3/index.html
+++ b/public-plan3/index.html
@@ -51,6 +51,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">contactos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="login.html">Iniciar Session</a>
+              </li>
           </ul>
         </div>
       </div>
@@ -65,7 +68,7 @@
             </h1><br>
           </div>
           <div class="col-lg-8 mx-auto">
-            <a class="btn btn-xl js-scroll-trigger"  id="mas" href="#sobre-drive" >Mas</a>
+            <a class="btn btn-xl js-scroll-trigger"  id="mas" href="#sobre-sumachik" >Mas</a>
           </div>
         </div>
       </div>
@@ -75,9 +78,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mx-auto text-center">
-            <h2 class="section-heading text-white">Guarda cualquier archivo</h2>
+            <h2 class="section-heading text-white">Guarda tus archivo</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Sumachik te ofrece 1 GB de almacenamiento online gratis para empezar. Guarda tu codigo de forma segura y comparte lo que desees con otros usuarios.</p>
+            <p class="text-faded mb-4">Sumachik te la psobilidad de tabajar gratis para empezar. Guarda tu codigo de forma segura y compartelo con otros usuarios.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#servicios">Leer Más!</a>
           </div>
         </div>
@@ -105,15 +108,15 @@
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem  text-primary mb-3 sr-icon-2"></i>
-              <h3 class="mb-3">Plan 3 Proyectos</h3>
-              <p class="text-muted mb-0">3 proyectos, con acceso a un chat de grupo de trabajo, con un costo de 3.99 dólares</p>
+              <h3 class="mb-3">Plan 2</h3>
+              <p class="text-muted mb-0">crear carpetas, editar y compartir archivos: html, css, y js con otros usuarios por 3.99 dólares</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-3"></i>
-              <h3 class="mb-3">plan de 10 Proyectos</h3>
-              <p class="text-muted mb-0">10 proyectos con acceso a un chat de grupo de trabajo, con un costo de 9.99 dólares</p>
+              <h3 class="mb-3">plan 3</h3>
+              <p class="text-muted mb-0">compartir archivos editar: html, css, y js , Editar sintaxis de cualquier lenguaje, con un costo de 5.99 dólares</p>
             </div>
           </div>
           
@@ -228,7 +231,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Empieza tu plan gratis!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="login.html">Iniciar ahora!</a>
+        <a class="btn btn-light btn-xl sr-button" href="registrar.html">Iniciar ahora!</a>
       </div>
     </section>
 
