--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase" id="letra-inicio" style="   font-family: 'open sans',arial,sans-serif;">
-              <strong >Todos tus archivos estés donde estés</strong>
+              <strong >Tus archivos estés donde estés</strong>
             </h1><br>
           </div>
           <div class="col-lg-8 mx-auto">
